tests/paczka1/fuzzy1/29941423.err
Error in line 4: S354 S610 36,27
Error in line 10: 4cmd5xJrL S354 1,5
Error in line 11: 4cmd5xJrL S498 24,6
Error in line 15: S354 S610 106,8
Error in line 19: 4cmd5xJrL S10 93,8
Error in line 27: 4cmd5xJrL S610 21,17
